# TB-Harbor-Taskgen

./: .gitignore  README.md  README.zh-CN.md  model.json  pyproject.toml
cc-definitions/agents/: seed-brainstormer.md  skillnet-researcher.md  tb-harbor-task-generator.md
cc-definitions/skills/tb-harbor-task-generation/: SKILL.md
cc-definitions/skills/tb-harbor-task-generation/scripts/: skillnet_search.py
docs/: TB_HARBOR_TASKGEN_MVP_SPEC.md  TB_HARBOR_TASKGEN_MVP_SPEC.zh-CN.md
prompts/: seed-brainstorm.md  skillnet-research.md  task-generation.md  task-repair.md  task-review.md
runs/reviews/: .gitkeep
scripts/: clean-intermediate.sh  env_init.example.sh  env_openai_init.example.sh  github_init.example.sh  run-claude-logged.sh  run-harbor-oracle-nop.sh  taskgen.sh  tool_init.sh
src/taskgen/: __init__.py  cli.py  common.py  config.py  openai_gateway.py
src/taskgen/claude/: __init__.py  cost.py  runner.py  workspace.py  worktree_guard.py
src/taskgen/harbor/: __init__.py  oracle_nop.py
src/taskgen/maintenance/: __init__.py  clean_intermediate.py
src/taskgen/phases/: __init__.py  phase1_seed_brainstorm.py  phase2_skillnet_research.py  phase3_task_generation.py  phase4_oracle_nop_check.py  phase5_task_review.py  phase6_task_repair.py  phase7_finalize.py
tests/: test_claude_policy_integration.py  test_openai_gateway.py  test_skillnet_search_helper.py  test_taskgen_core.py
